# TSFM_lecture_3_transformers

./: .gitignore  README.md  config.yaml  main.py  optimizer.py  pyproject.toml  scratchpad.ipynb  test.json  test_backward_passes.py  torch_primitives.py  transformer.py
distributed training talk/: talk_distributed_training.md
tokenizer/: EncoderDecoder.py  tokenization.py  tokenizer.py  tokenizer_training.py  utils.py
