[project]
name = "lecture-3-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.11.2",
    "jax>=0.7.1",
    "jaxlib>=0.7.1",
    "numpy>=2.3.3",
    "psutil>=7.1.0",
    "regex>=2025.9.1",
    "speedscope>=1.0",
    "tdqm>=0.0.1",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
